docs/api/qiskit/0.33/qiskit.transpiler.passes.UnitarySynthesis.mdx
---
title: UnitarySynthesis (v0.33)
description: API reference for qiskit.transpiler.passes.UnitarySynthesis in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.UnitarySynthesis
---

# UnitarySynthesis

<Class id="qiskit.transpiler.passes.UnitarySynthesis" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/synthesis/unitary_synthesis.py" signature="UnitarySynthesis(basis_gates, approximation_degree=1, coupling_map=None, backend_props=None, pulse_optimize=None, natural_direction=None, synth_gates=None, method='default', min_qubits=None, plugin_config=None)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Synthesize gates according to their basis gates.

  Synthesize unitaries over some basis gates.

  This pass can approximate 2-qubit unitaries given some approximation closeness measure (expressed as approximation\_degree). Other unitaries are synthesized exactly.

  **Parameters**

  *   **basis\_gates** (*list\[str]*) – List of gate names to target.
  *   **approximation\_degree** (*float*) – Closeness of approximation (0: lowest, 1: highest).
  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – the coupling map of the backend in case synthesis is done on a physical circuit. The directionality of the coupling\_map will be taken into account if pulse\_optimize is True/None and natural\_direction is True/None.
  *   **backend\_props** ([*BackendProperties*](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")) – Properties of a backend to synthesize for (e.g. gate fidelities).
  *   **pulse\_optimize** (*bool*) – Whether to optimize pulses during synthesis. A value of None will attempt it but fall back if it doesn’t succeed. A value of True will raise an error if pulse-optimized synthesis does not succeed.
  *   **natural\_direction** (*bool*) – Whether to apply synthesis considering directionality of 2-qubit gates. Only applies when pulse\_optimize is True or None. The natural direction is determined by first checking to see whether the coupling map is unidirectional. If there is no coupling map or the coupling map is bidirectional, the gate direction with the shorter duration from the backend properties will be used. If set to True, and a natural direction can not be determined, raises TranspileError. If set to None, no exception will be raised if a natural direction can not be determined.
  *   **synth\_gates** (*list\[str]*) – List of gates to synthesize. If None and pulse\_optimize is False or None, default to \[‘unitary’]. If None and pulse\_optimzie == True, default to \[‘unitary’, ‘swap’]
  *   **method** (*str*) – The unitary synthesis method plugin to use.
  *   **min\_qubits** (`Optional`\[`int`]) – The minimum number of qubits in the unitary to synthesize. If this is set and the unitary is less than the specified number of qubits it will not be synthesized.
  *   **plugin\_config** (`Optional`\[`dict`]) – Optional extra configuration arguments (as a dict) which are passed directly to the specified unitary synthesis plugin. By default this will have no effect as the default plugin has no extra arguments. Refer to the documentation of your unitary synthesis plugin on how to use this.

  ## Methods

  <span id="qiskit-transpiler-passes-unitarysynthesis-name" />

  ### name

  <Function id="qiskit.transpiler.passes.UnitarySynthesis.name" signature="UnitarySynthesis.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-unitarysynthesis-run" />

  ### run

  <Function id="qiskit.transpiler.passes.UnitarySynthesis.run" signature="UnitarySynthesis.run(dag)">
    Run the UnitarySynthesis pass on dag.

    **Parameters**

    **dag** (`DAGCircuit`) – input dag.

    **Return type**

    `DAGCircuit`

    **Returns**

    Output dag with UnitaryGates synthesized to target basis.

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if a ‘method’ was specified for the class and is not found in the installed plugins list. The list of installed plugins can be queried with [`unitary_synthesis_plugin_names()`](qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names "qiskit.transpiler.passes.synthesis.plugin.unitary_synthesis_plugin_names")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.UnitarySynthesis.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.UnitarySynthesis.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

